--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -47,6 +47,11 @@ const today = new Date();
 		</a>
 	</div>
 	<a
+		href="https://beian.mps.gov.cn/#/query/webSearch?code=61011302001964"
+		rel="noreferrer"
+		target="_blank">陕公网安备61011302002117号</a
+	>
+	<a
 		href="https://beian.miit.gov.cn/"
 		target="_blank"
 		style="color: #999; font-size: 0.85em;">陕ICP备2025067852号-1</a
