--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -49,7 +49,8 @@ const today = new Date();
 	<a
 		href="https://beian.mps.gov.cn/#/query/webSearch?code=61011302001964"
 		rel="noreferrer"
-		target="_blank">陕公网安备61011302002117号</a
+		target="_blank"
+		style="color: #999; font-size: 0.85em;">陕公网安备61011302002117号</a
 	>
 	<a
 		href="https://beian.miit.gov.cn/"
